fix: Explicitly align modals to the top, and not vertically centered

--- a/src/new-components/modal/modal.module.css
+++ b/src/new-components/modal/modal.module.css
@@ -38,6 +38,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: flex-start;
     width: 100%;
     height: 100%;
     box-sizing: border-box;
